Add chang  yossef branch

--- a/app/i18n/ar.json
+++ b/app/i18n/ar.json
@@ -70,5 +70,56 @@
     "home": "الرئيسية",
     "chat": "الدردشة",
     "profile": "الملف الشخصي"
+  },
+
+  "privacy": {
+    "title": "الخصوصية والأمان",
+    "security": "الأمان",
+    "privacy": "الخصوصية",
+    "dataManagement": "إدارة البيانات",
+    "legal": "قانوني",
+    "biometricAuth": "المصادقة البيومترية",
+    "biometricDesc": "استخدم البصمة أو التعرف على الوجه لفتح التطبيق",
+    "biometricNotAvailable": "غير متوفر على هذا الجهاز",
+    "biometricsNotAvailableTitle": "المصادقة البيومترية غير متوفرة",
+    "biometricsNotAvailableMsg": "المصادقة البيومترية غير متوفرة على هذا الجهاز.",
+    "authenticatePrompt": "قم بالمصادقة لتمكين تسجيل الدخول البيومتري",
+    "usePasscode": "استخدم كلمة المرور",
+    "authFailedTitle": "فشلت المصادقة",
+    "authFailedMsg": "تعذر التحقق من هويتك",
+    "autoLock": "القفل التلقائي",
+    "autoLockDesc": "قفل التطبيق بعد فترة من الخمول",
+    "immediately": "فوراً",
+    "never": "أبداً",
+    "afterMinutes": "بعد {{minutes}} دقائق",
+    "twoFactor": "المصادقة الثنائية",
+    "twoFactorDesc": "إضافة طبقة أمان إضافية",
+    "twoFactorEnabledTitle": "المصادقة الثنائية",
+    "twoFactorEnabledMsg": "ستحتاج للتحقق من هويتك عبر البريد الإلكتروني عند تسجيل الدخول من أجهزة جديدة.",
+    "dataSharing": "مشاركة البيانات للأبحاث",
+    "dataSharingDesc": "ساعد في تحسين خوارزميات كشف السرطان",
+    "diagnosticData": "مشاركة البيانات التشخيصية",
+    "diagnosticDataDesc": "مشاركة البيانات الطبية المجهولة للبحث العلمي",
+    "exportData": "تصدير بياناتي",
+    "exportDataDesc": "تحميل جميع بياناتك",
+    "exportDataTitle": "تصدير البيانات",
+    "exportDataMsg": "سيتم تجهيز بياناتك للتصدير. ستتلقاها عبر البريد الإلكتروني خلال 24 ساعة.",
+    "export": "تصدير",
+    "exportStartedTitle": "بدأ التصدير",
+    "exportStartedMsg": "تم بدء عملية تصدير بياناتك. ستتلقى بريدًا إلكترونيًا عند اكتمالها.",
+    "deleteAccount": "حذف الحساب",
+    "deleteAccountDesc": "حذف حسابك وبياناتك بشكل دائم",
+    "deleteAccountTitle": "حذف الحساب",
+    "deleteAccountWarning": "لا يمكن التراجع عن هذا الإجراء. سيتم حذف جميع بياناتك بشكل دائم.",
+    "confirmDeleteTitle": "تأكيد الحذف",
+    "confirmDeleteMsg": "الرجاء إدخال كلمة المرور لتأكيد حذف الحساب.",
+    "confirm": "تأكيد",
+    "delete": "حذف",
+    "accountDeletedTitle": "تم حذف الحساب",
+    "accountDeletedMsg": "تم جدولة حسابك للحذف.",
+    "privacyPolicy": "سياسة الخصوصية",
+    "terms": "شروط الخدمة",
+    "version": "الإصدار"
   }
 }
+
