--- a/app/i18n/en.json
+++ b/app/i18n/en.json
@@ -137,7 +137,8 @@
                   "low": "Low",
                   "unknown": "Unknown",
                   "none": "None",
-                  "moderate": "Moderate"
+                  "moderate": "Moderate",
+                  "medium": "Medium"
               }
           },
           "colorectal": {
