--- a/app/i18n/ar.json
+++ b/app/i18n/ar.json
@@ -31,7 +31,29 @@
       "pending": "معلق",
       "healthScore": "الدرجة الصحية",
       "nextVisit": "الزيارة القادمة",
-      "recentPrescription": "روشتة حديثة"
+      "recentPrescription": "روشتة حديثة",
+      "greeting": {
+          "morning": "🌤️ صباح الخير",
+          "afternoon": "☀️ مساء الخير",
+          "evening": "🌙 مساء الخير"
+      },
+      "role": {
+          "patientDisplay": "👤 مريض",
+          "doctorDisplay": "👨‍⚕️ طبيب"
+      },
+      "codeModal": {
+          "title": "كود الدكتور",
+          "desc": "شارك هذا الكود مع المرضى للربط معك",
+          "copy": "انقر للنسخ",
+          "copied": "تم النسخ",
+          "copiedDesc": "تم نسخ كود الدكتور",
+          "close": "إغلاق"
+      },
+      "doctorsModal": {
+          "title": "الأطباء المتاحين",
+          "loading": "جاري تحميل الأطباء...",
+          "empty": "لا توجد أطباء متاحين حالياً"
+      }
   },
   "auth": {
       "login": "تسجيل الدخول",
